--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,89 @@
-accelerate==0.25.0
+aiofiles==24.1.0
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+colorama==0.4.6
+contourpy==1.3.1
+cycler==0.12.1
+deepspeed==0.16.5
+einops==0.8.1
+exceptiongroup==1.2.2
+fastapi==0.115.12
+ffmpy==0.5.0
+filelock==3.13.1
+fonttools==4.57.0
+fsspec==2024.6.1
+gradio==5.25.0
+gradio_client==1.8.0
+groovy==0.1.2
+h11==0.14.0
+hjson==3.1.0
+httpcore==1.0.8
+httpx==0.28.1
+huggingface-hub==0.30.2
+idna==3.10
+intel-openmp==2021.4.0
+Jinja2==3.1.4
+kiwisolver==1.4.8
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.10.1
+mdurl==0.1.2
+mkl==2021.4.0
+mpmath==1.3.0
+msgpack==1.1.0
+networkx==3.3
+ninja==1.11.1.4
+numpy==1.26.4
+nvidia-ml-py==12.570.86
+omegaconf==2.3.0
+orjson==3.10.16
+packaging==24.2
+pandas==2.2.3
+pillow==11.0.0
+psutil==7.0.0
+py-cpuinfo==9.0.0
+pydantic==2.11.3
+pydantic_core==2.33.1
+pydub==0.25.1
+Pygments==2.19.1
+pynini @ file:///D:/bld/pynini_1667113586202/work
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-multipart==0.0.20
+pytz==2025.2
+PyYAML==6.0.2
+regex==2024.11.6
+requests==2.32.3
+rich==14.0.0
+ruff==0.11.5
+safehttpx==0.1.6
+safetensors==0.5.3
+scipy==1.15.2
+semantic-version==2.10.0
+sentencepiece==0.2.0
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+starlette==0.46.2
+sympy==1.13.1
+tbb==2021.11.0
+tokenizers==0.15.2
+tomlkit==0.13.2
+torch==2.3.1+cu121
+torchaudio==2.3.1+cu121
+torchvision==0.18.1+cu121
+tqdm==4.67.1
 transformers==4.36.2
-tokenizers==0.15.0
-cn2an==0.5.22
-ffmpeg-python==0.2.0
-Cython==3.0.7
-g2p-en==2.1.0
-jieba==0.42.1
-keras==2.9.0
-numba==0.58.1
-numpy==1.26.2
-pandas==2.1.3
-matplotlib==3.8.2
-opencv-python==4.9.0.80
-vocos==0.1.0
-accelerate==0.25.0
-tensorboard==2.9.1
-omegaconf
-sentencepiece
-librosa
-gradio
-tqdm
+typer==0.15.2
+typing-inspection==0.4.0
+typing_extensions==4.12.2
+tzdata==2025.2
+urllib3==2.4.0
+uvicorn==0.34.1
+websockets==15.0.1
+pywin32==306
 
-WeTextProcessing; platform_machine != "Darwin"
-wetext; platform_system == "Darwin"
